--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,10 @@ services:
     image: jacobalberty/unifi:stable
     init: true
     environment:
-      TZ="America/New_York"
-      RUNAS_UID0=false
-      UNIFI_UID=1000
-      UNIFI_GID=1000
+      TZ: "America/New_York"
+      RUNAS_UID0: false
+      UNIFI_UID: 1000
+      UNIFI_GID: 1000
     ports:
       - "8080:8080"
       - "8443:8443"
